mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: blog
  labels:
    app: blog
    component: backend
spec:
  serviceName: "mysql-service"
  replicas: 2
  selector:
    matchLabels:
      app: blog
      component: backend
  template:
    metadata:
      labels:
        app: blog
        component: backend
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
      labels:
        app: blog
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
